<resources>
    <string name="app_name">Activity Manager</string>
    <string name="activity_calendar">Calendar</string>
    <string name="activity_list">List</string>
    <string name="settings">Settings</string>
    <string name="ui">User interface</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="notify">Enable notifications</string>
    <string name="reminder">Reminder period</string>
    <string name="lng_select">Select language</string>
    <string name="period_select">Select period</string>
    <string name="eng">English</string>
    <string name="srb">Serbian</string>
    <string name="eng_value">en</string>
    <string name="srb_value">sr</string>
    <string name="p1d">1 day</string>
    <string name="p1d_value">1d</string>
    <string name="p1w">1 week</string>
    <string name="p1w_value">1w</string>
    <string name="p1h">1 hour</string>
    <string name="p1h_value">1h</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>

    <string name="jan">JAN</string>
    <string name="feb">FEB</string>
    <string name="mar">MAR</string>
    <string name="apr">APR</string>
    <string name="may">MAY</string>
    <string name="jun">JUN</string>
    <string name="jul">JUL</string>
    <string name="avg">AVG</string>
    <string name="sep">SEP</string>
    <string name="oct">OCT</string>
    <string name="nov">NOV</string>
    <string name="dec">DEC</string>

    <string name="work">work</string>
    <string name="travel">travel</string>
    <string name="freetime">relaxation</string>

    <string name="work_val">work</string>
    <string name="travel_val">travel</string>
    <string name="freetime_val">relaxation</string>

    <string name="search">Search</string>
    <string name="sure">Delete activity?</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="new_activity">New Activity</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="type">Type</string>
    <string name="at">at</string>
    <string name="submit">SUBMIT</string>
    <string name="fill">Fill in all fields!</string>
    <string name="location">Pick location</string>
    <string name="next">NEXT</string>
    <string name="upload">Upload images</string>
    <string name="take">Take photo</string>
    <string name="details">Activity details</string>
    <string name="no_data">Empty list</string>
    <string name="notify_label">Upcoming activities:</string>
    <string name="ahead">Notification timing</string>
    <string name="remind">## upcoming activities!</string>
    <string name="view">VIEW</string>
    <string-array name="period_values">
        <item>1 day</item>
        <item>1 week</item>
        <item>1 hour</item>
    </string-array>
    <string-array name="lngs">
        <item>Serbian</item>
        <item>English</item>
    </string-array>

    <string-array name="types">
        <item>work</item>
        <item>travel</item>
        <item>relaxation</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="upcoming">Upcoming activities</string>
</resources>