<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calendar">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="etf.mr.project.activitymanager.fragments.CalendarFragment"
        android:label="@string/activity_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="etf.mr.project.activitymanager.fragments.ListFragment"
        android:label="@string/activity_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="etf.mr.project.activitymanager.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>