<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment"
    style="@style/FragmentStyle">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        android:layout_marginStart="25dp"
        style="@style/SettingsHeader"/>

    <TextView
        android:id="@+id/lng_lbl"
        style="@style/SettingsOption"
        android:layout_width="@dimen/settings_option_width"
        android:layout_height="@dimen/settings_option_height"
        android:gravity="center_vertical"
        android:text="@string/language"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/lng"
        style="@style/SettingsValue"
        android:layout_width="@dimen/settings_value_width"
        android:layout_height="@dimen/settings_value_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toEndOf="@+id/lng_lbl"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.035" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lng_lbl"
        app:layout_constraintVertical_bias="0.035"
        style="@style/HorizontalLine"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.025"
        style="@style/SettingsHeader"/>

    <TextView
        android:id="@+id/notify_lbl"
        style="@style/SettingsOption"
        android:layout_width="@dimen/settings_option_width"
        android:layout_height="@dimen/settings_option_height"
        android:text="@string/notify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/period_lbl"
        style="@style/SettingsOption"
        android:layout_width="@dimen/settings_option_width"
        android:layout_height="@dimen/settings_option_height"
        android:text="@string/reminder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notify_lbl"
        app:layout_constraintVertical_bias="0.035" />

    <Switch
        android:id="@+id/switchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toEndOf="@+id/notify_lbl"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.096" />

    <TextView
        android:id="@+id/period"
        style="@style/SettingsValue"
        android:layout_width="@dimen/settings_value_width"
        android:layout_height="@dimen/settings_value_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toEndOf="@+id/period_lbl"
        app:layout_constraintTop_toBottomOf="@+id/switchBtn"
        app:layout_constraintVertical_bias="0.035" />
</androidx.constraintlayout.widget.ConstraintLayout>