<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:fillViewport="true"
    tools:context=".fragments.NewActivityFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/FragmentStyle"
        android:layout_width="match_parent"
        android:layout_height="700dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xxlarge_margin"
            android:layout_marginTop="@dimen/xxlarge_margin"
            android:layout_marginEnd="@dimen/xxlarge_margin"
            android:hint="@string/title"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_input_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/desc_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android_maxWidth="300dp"
            android:layout_marginStart="@dimen/xxlarge_margin"
            android:layout_marginTop="@dimen/xxlarge_margin"
            android:layout_marginEnd="@dimen/xxlarge_margin"
            android:gravity="start|top"
            android:hint="@string/desc"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/desc_input_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinner"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xxlarge_margin"
            android:layout_marginTop="@dimen/xxlarge_margin"
            android:layout_marginEnd="@dimen/xxlarge_margin"
            android:hint="@string/type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_input"
            app:layout_constraintVertical_bias="0.0">

            <AutoCompleteTextView
                android:id="@+id/comboBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/start"
            android:layout_width="@dimen/medium_input_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xxlarge_margin"
            android:layout_marginTop="@dimen/xxlarge_margin"
            android:layout_marginEnd="@dimen/xxlarge_margin"
            android:hint="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_input"
            app:layout_constraintVertical_bias="0.0"
            app:startIconDrawable="@drawable/ic_calendar"
            app:startIconTint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/startTime"
            android:layout_width="@dimen/small_input_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xxlarge_margin"
            android:layout_marginTop="@dimen/xxlarge_margin"
            android:layout_marginEnd="@dimen/xxlarge_margin"
            android:hint="@string/at"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/start"
            app:layout_constraintTop_toBottomOf="@+id/desc_input"
            app:layout_constraintVertical_bias="0.0"
            app:startIconDrawable="@drawable/ic_time"
            app:startIconTint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/endTime"
            android:layout_width="@dimen/small_input_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xxlarge_margin"
            android:layout_marginTop="@dimen/xxlarge_margin"
            android:layout_marginEnd="@dimen/xxlarge_margin"
            android:hint="@string/at"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/end"
            app:layout_constraintTop_toBottomOf="@+id/startTime"
            app:layout_constraintVertical_bias="0.0"
            app:startIconDrawable="@drawable/ic_time"
            app:startIconTint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/end"
            android:layout_width="@dimen/medium_input_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xxlarge_margin"
            android:layout_marginTop="@dimen/xxlarge_margin"
            android:layout_marginEnd="@dimen/xxlarge_margin"
            android:hint="@string/end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start"
            app:layout_constraintVertical_bias="0.0"
            app:startIconDrawable="@drawable/ic_calendar"
            app:startIconTint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/take"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take"
            android:layout_marginTop="@dimen/xxlarge_margin"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upload"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:layout_marginTop="@dimen/xxlarge_margin"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/end"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/xxlarge_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="180dp"
            android:layout_height="180dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/take"
            app:layout_constraintVertical_bias="0.0"
             />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>